# english-inspector

./: .gitignore  AGENTS.md
.claude/: settings.local.json
.githooks/: pre-commit
.omc/prompts/: codex-inline-this-is-a-connectivity-test-please-respond-with-co-0f193100.md  codex-prompt-this-is-a-connectivity-test-please-respond-with-co-d351941e.md  gemini-inline-response-this-is-a-connectivity-test-please-respond-with-ge-a5ea407d.md  gemini-inline-this-is-a-connectivity-test-please-respond-with-ge-a5ea407d.md  gemini-prompt-this-is-a-connectivity-test-please-respond-with-ge-1a2dd2af.md  gemini-response-this-is-a-connectivity-test-please-respond-with-ge-1a2dd2af.md
.omc/research/: dspy3-litellm-research.md
.omc/state/: agent-replay-85f3716e-b81a-46ab-9319-d001c60df2e3.jsonl  agent-replay-bbf603c7-9105-4fef-bf03-381b9693ff62.jsonl  hud-state.json  last-tool-error.json
backend/: .env.example  pyproject.toml
backend/.omc/state/: agent-replay-85f3716e-b81a-46ab-9319-d001c60df2e3.jsonl  hud-state.json  subagent-tracking.json
backend/app/: main.py
backend/app/api/: auth_routes.py  exam_routes.py  routes.py
backend/app/core/: auth.py  config.py  database.py  logging_config.py
backend/app/models/: question.py  user.py
backend/app/schemas/: question.py
backend/app/services/: dspy_modules.py  generator.py  optimizer.py  quality_filter.py
backend/english_inspector_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_dspy_modules.py  test_exam_routes.py  test_optimizer.py  test_quality_filter.py
backend/tests/fixtures/: golden_questions.json
backend/tests/integration/: conftest.py  test_smoke.py
docs/: ALGORITHM-REVIEW.md  PHASE-1-SETUP.md  PHASE-2-IMPROVEMENTS.md  PHASE-2-LLM-TEST-REQUIREMENTS.md  STUDY-GUIDE.md
frontend/: biome.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthDialog.tsx  ExamExportDialog.tsx  GenerateForm.tsx  QuestionCard.tsx  SaveExamDialog.tsx  UserMenu.tsx
frontend/src/lib/: api.ts  auth.ts  pdf-export.ts
frontend/src/types/: auth.ts  question.ts
(+3 files in other folders)
